# AI_QnA_with_your_sentiment

./: README.md  docker-compose.yaml  pyproject.toml  test.py
src/: config.py  database.py  dependencies.py  main.py  mcp_test.py
src/auth/: dependencies.py  models.py  queries.py  router.py  schemas.py  service.py  utils.py
src/chat/: agent.py  models.py
src/core/: agent.py  queries.py  schema.py
src/forecast/: agent.py  models.py  prompt.py  queries.py  rag.py  schemas.py  tools.py
src/letter/: models.py  queries.py  router.py  schemas.py  service.py
src/sentiment/: agent.py  client.py  prompts.py  schema.py
src/slack/: choices.py  client.py
src/writer/: agent.py  prompts.py  schema.py  tools.py
tests/: test_auth.py
