[tool.poetry]
name = "ai-qna-with-your-sentiment"
version = "0.1.0"
description = ""
authors = ["bae-code <locing45@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.12"
openai = "^1.68.2"
transformers = "^4.50.1"
python-dotenv = "^1.1.0"
uvicorn = "^0.34.0"
motor = "^3.7.0"
redis = "^5.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
